syntax = "proto3";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

package account.v1;

option go_package = "/sidekiq-people/v1";

message CredentialsRequest {
  string user_name = 1;
  string email = 2;
  string password = 3;
}

message Thumbnails {
  string small = 1;
  string medium = 2;
  string large = 3;
  string icon = 4;
  string original = 5;
}


message Account {
  int32 ID = 1;
  int32 accountType = 2;
  string userName = 3;
  string firstName = 4;
  string lastName = 5;
  string photo = 6;
  Thumbnails thumbs = 7;
  string email = 8;
  string recoveryEmail = 9;
  string phone = 10;
  string password = 11;
  google.protobuf.Timestamp createDate = 12;
  google.protobuf.Timestamp lastModifiedDate = 13;
  string token = 14;
  bool isActive = 15;
  string resetToken = 16;
  bool resetStatus = 17;
  google.protobuf.Timestamp resetTime = 18;
}


message AccountReply {
  int32 id = 1;
  string email = 2;
}

message AccountDetailRequest {
  int32 account_id = 1;
}

message AccountDetailReply {
  Account data = 1;
}

message GenericReply {
  google.protobuf.Any data  = 1;
  int32 status = 2;
  string message  =3;
}

message ValidateProfileRequest {
  int32 profile_id = 1;
  int32 account_id = 2;
}

message ConciseProfileRequest {
  int32 profile_id = 1;
}

message ConciseProfileReply {
  int32 id = 1;
  int32 accountID = 2;
  string first_name = 3;
  string last_name = 4;
  string photo = 5;
  string screen_name = 6;
  string user_name = 7;
  string email = 8;
  string phone = 9;
  string type = 10;
  bool shareable = 11;
  string default_things_board = 12;
  Thumbnails thumbs = 13;
}


service AccountService {
    rpc AuthAccount(CredentialsRequest) returns (AccountReply) {}
    rpc GetAccountDetails(AccountDetailRequest) returns (AccountDetailReply) {}
    rpc ValidateProfile(ValidateProfileRequest) returns (GenericReply) {}
    rpc GetConciseProfile(ConciseProfileRequest) returns (ConciseProfileReply) {}
}


